# pypi-tea

./: CLAUDE.md  README.md  main.py  pypi-tea.cdx.json  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
deploy/: pypi-tea.service  setup.sh
scripts/: migrate_sbom_formats.py  migrate_sbom_sha256.py
src/pypi_tea/: app.py  cache.py  config.py  deps.py  serialization.py
src/pypi_tea/routes/: artifacts.py  component_releases.py  components.py  discovery.py  product_releases.py  products.py  stats.py
src/pypi_tea/services/: mapper.py  pypi.py  sbom_extractor.py  sbom_format.py  uuids.py
src/pypi_tea/static/: index.html
tests/: conftest.py  test_conformance.py  test_well_known.py  test_wheel_filter.py
